src/test/deca/context/invalid/created/SansObjet/IllegalAssignmentVar.deca
// Description:
//    Teste l'assignation d'un boolean a une variable de type int
// Resultats:
//    IllegalAssignmentVar.deca:8:8: Error: Illegal RValue type, got boolean, expected int

{
    int a;
    a = true;
}